[package]
name = "countmap"
version = "0.2.0"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/vbrandl/countmap"
homepage = "https://github.com/vbrandl/countmap"
documentation = "https://docs.rs/countmap"
description = "Simple map to count occurences of supplied keys"

[dependencies]
num-traits = "0.1"

[badges]
travis-ci = { repository = "vbrandl/countmap" }
